@@ -71,6 +71,8 @@ common.gettingData=Getting data...
 common.settingValue=Setting value...
 common.sendTestEmail=Send test email
 common.testEmailSent=Test email was sent to ''{0}''
+common.emailSent=Email was sent to ''{0}''
+common.emailSentToMailingList=Email was sent to mailing list with xid {0}
 common.rtn=Return to normal
 common.nortn=No RTN
 common.activeTime=Active time
@@ -1402,6 +1404,8 @@ systemSettings.systemPermissions=Permissions
 systemSettings.permissions.datasourceManagement=Data Source Management Permissions
 systemSettings.permissions.superadmin=Superadmin group
 systemSettings.permissions.userEditSelf=Edit your own user settings
+systemSettings.permissions.registerDisabled=Register disabled users
+systemSettings.permissions.sendToMailingList=Send email to mailing list
 systemSettings.systemAlarmLevelsSaved=System event alarm levels have been saved
 systemSettings.auditAlarmLevelsSaved=Audit event alarm levels have been saved
 systemSettings.httpSaved=Http settings have been saved
